--- a/templates/404.html
+++ b/templates/404.html
@@ -1,8 +1,8 @@
 <!-- wp:template-part {"slug":"header","tagName":"header","className":"site-header"} /-->
 
-<!-- wp:group {"tagName":"main","style":{"spacing":{"padding":{"top":"var:preset|spacing|120","bottom":"var:preset|spacing|120"}}},"layout":{"type":"constrained"}} -->
+<!-- wp:group {"tagName":"main","style":{"spacing":{"padding":{"top":"0","bottom":"0","left":"0","right":"0"}}},"layout":{"type":"constrained"}} -->
 <main class="wp-block-group"
-	style="padding-top:var(--wp--preset--spacing--120);padding-bottom:var(--wp--preset--spacing--120)">
+	style="padding-top:0;padding-bottom:0;padding-left:0;padding-right:0">
 	<!-- wp:pattern {"slug":"webentwicklerin/404"} /-->
 </main>
 <!-- /wp:group -->
