--- a/templates/index.html
+++ b/templates/index.html
@@ -11,25 +11,25 @@
 		<!-- wp:group {"style":{"spacing":{"margin":{"top":"0","bottom":"0"},"padding":{"top":"var:preset|spacing|20","bottom":"var:preset|spacing|20","left":"var:preset|spacing|20","right":"var:preset|spacing|20"},"blockGap":"var:preset|spacing|20"},"border":{"width":"0px","style":"none"}},"layout":{"type":"constrained"}} -->
 		<div class="wp-block-group"
 			style="border-style:none;border-width:0px;margin-top:0;margin-bottom:0;padding-top:var(--wp--preset--spacing--20);padding-right:var(--wp--preset--spacing--20);padding-bottom:var(--wp--preset--spacing--20);padding-left:var(--wp--preset--spacing--20)">
-			<!-- wp:post-title {"level":3,"isLink":true,"style":{"spacing":{"margin":{"top":"0","bottom":"0"}},"elements":{"link":{"color":{"text":"var:preset|color|bigheaders"},":hover":{"color":{"text":"var:preset|color|primary"}}}}},"fontSize":"medium"} /-->
+			<!-- wp:post-title {"level":3,"isLink":true,"style":{"spacing":{"margin":{"top":"0","bottom":"0"}}},"fontSize":"medium"} /-->
 
 			<!-- wp:group {"style":{"spacing":{"margin":{"top":"0","bottom":"0"},"blockGap":"0"}},"layout":{"type":"flex","allowOrientation":false,"orientation":"vertical"}} -->
 			<div class="wp-block-group" style="margin-top:0;margin-bottom:0">
 				<!-- wp:post-date {"textColor":"contrast"} /-->
 
-				<!-- wp:post-terms {"term":"category","style":{"elements":{"link":{"color":{"text":"var:preset|color|bigheaders"},":hover":{"color":{"text":"var:preset|color|primary"}}}}},"textColor":"contrast"} /-->
+				<!-- wp:post-terms {"term":"category","textColor":"contrast"} /-->
 			</div>
 			<!-- /wp:group -->
 
-			<!-- wp:post-excerpt {"moreText":"weiterlesen","excerptLength":25} /-->
+			<!-- wp:post-excerpt {"moreText":"Read more","excerptLength":25} /-->
 		</div>
 		<!-- /wp:group -->
 		<!-- /wp:post-template -->
 
 		<!-- wp:query-pagination {"paginationArrow":"chevron","layout":{"type":"flex","justifyContent":"space-between"}} -->
-		<!-- wp:query-pagination-previous {"label":"zurück"} /-->
+		<!-- wp:query-pagination-previous {"label":"Previous"} /-->
 
-		<!-- wp:query-pagination-next {"label":"weiter"} /-->
+		<!-- wp:query-pagination-next {"label":"Next"} /-->
 		<!-- /wp:query-pagination -->
 
 		<!-- wp:query-pagination {"paginationArrow":"chevron","layout":{"type":"flex","justifyContent":"center"}} -->
