--- a/templates/search.html
+++ b/templates/search.html
@@ -5,21 +5,21 @@
 	style="padding-top:var(--wp--preset--spacing--120);padding-bottom:var(--wp--preset--spacing--120)">
 	<!-- wp:query-title {"type":"search","level":2} /-->
 
-	<!-- wp:search {"label":"Search","showLabel":false,"buttonText":"suchen","style":{"border":{"radius":"15px"}},"textColor":"base"} /-->
+	<!-- wp:search {"label":"Search","showLabel":false,"buttonText":"Search","style":{"border":{"radius":"15px"}},"textColor":"base"} /-->
 
 	<!-- wp:query {"queryId":2,"query":{"perPage":10,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true},"layout":{"type":"constrained"}} -->
 	<div class="wp-block-query">
 		<!-- wp:post-template {"style":{"spacing":{"blockGap":"var:preset|spacing|30"}},"layout":{"type":"default"}} -->
-		<!-- wp:post-title {"level":3,"isLink":true,"style":{"spacing":{"margin":{"top":"0","bottom":"0"}},"elements":{"link":{"color":{"text":"var:preset|color|bigheaders"},":hover":{"color":{"text":"var:preset|color|primary"}}}}},"fontSize":"medium"} /-->
+		<!-- wp:post-title {"level":3,"isLink":true,"style":{"spacing":{"margin":{"top":"0","bottom":"0"}}},"fontSize":"medium"} /-->
 
 		<!-- wp:group {"style":{"spacing":{"margin":{"top":"0","bottom":"0"}}},"layout":{"type":"flex","allowOrientation":false}} -->
 		<div class="wp-block-group" style="margin-top:0;margin-bottom:0"><!-- wp:post-date {"textColor":"contrast"} /-->
 
-			<!-- wp:post-terms {"term":"category","style":{"elements":{"link":{"color":{"text":"var:preset|color|bigheaders"},":hover":{"color":{"text":"var:preset|color|primary"}}}}}} /-->
+			<!-- wp:post-terms {"term":"category"} /-->
 		</div>
 		<!-- /wp:group -->
 
-		<!-- wp:post-excerpt {"moreText":"lesen","showMoreOnNewLine":false} /-->
+		<!-- wp:post-excerpt {"moreText":"Read more","showMoreOnNewLine":false} /-->
 		<!-- /wp:post-template -->
 
 		<!-- wp:query-pagination {"paginationArrow":"chevron","layout":{"type":"flex","justifyContent":"space-between"}} -->
