--- a/templates/single.html
+++ b/templates/single.html
@@ -1,8 +1,7 @@
-<!-- wp:template-part {"slug":"header","theme":"webentwicklerin","tagName":"header","className":"site-header"} /-->
+<!-- wp:template-part {"slug":"header"} /-->
 
-<!-- wp:group {"tagName":"main","style":{"spacing":{"padding":{"top":"var:preset|spacing|120","bottom":"var:preset|spacing|120"}}},"layout":{"type":"constrained"}} -->
-<main class="wp-block-group"
-	style="padding-top:var(--wp--preset--spacing--120);padding-bottom:var(--wp--preset--spacing--120)">
+<!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
+<main class="wp-block-group">
 	<!-- wp:post-title /-->
 
 	<!-- wp:group {"style":{"spacing":{"blockGap":"var:preset|spacing|small"}},"layout":{"type":"flex","allowOrientation":false}} -->
@@ -30,4 +29,4 @@
 </main>
 <!-- /wp:group -->
 
-<!-- wp:template-part {"slug":"footer","theme":"webentwicklerin","tagName":"footer","className":"site-footer"} /-->
+<!-- wp:template-part {"slug":"footer"} /-->
