--- a/scss/01-basics.scss
+++ b/scss/01-basics.scss
@@ -24,6 +24,15 @@ a {
     text-underline-offset: var(--wp--preset--spacing--tiny, 1px);
 }
 
+// Accessible focus styles
+a:focus-visible,
+button:focus-visible,
+input[type="submit"]:focus-visible,
+[role="button"]:focus-visible {
+    outline: 2px solid var(--wp--preset--color--accent);
+    outline-offset: 2px;
+}
+
 // Utility Classes
 .hidden {
     display: none !important;
