--- a/templates/page.html
+++ b/templates/page.html
@@ -1,8 +1,8 @@
 <!-- wp:template-part {"slug":"header"} /-->
 
-<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0","bottom":"0"},"blockGap":"0"}},"layout":{"type":"constrained","contentSize":"1280px"}} -->
+<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0","bottom":"0"},"blockGap":"0"}},"layout":{"type":"constrained","contentSize":"1280px"},"anchor":"site-content"} -->
 <main class="wp-block-group"
-	style="margin-top:0;margin-bottom:0">
+	style="margin-top:0;margin-bottom:0" id="site-content">
 	<!-- wp:post-title /-->
 
 	<!-- wp:post-content {"align":"full","style":{"dimensions":{"minHeight":""},"spacing":{"blockGap":"var:preset|spacing|small"}},"layout":{"type":"constrained","contentSize":"1280px"}} /-->
