--- a/templates/search.html
+++ b/templates/search.html
@@ -1,7 +1,7 @@
 <!-- wp:template-part {"slug":"header"} /-->
 
-<!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
-<main class="wp-block-group">
+<!-- wp:group {"tagName":"main","layout":{"type":"constrained"},"anchor":"site-content"} -->
+<main class="wp-block-group" id="site-content">
 	<!-- wp:pattern {"slug":"webentwicklerin/hidden-search"} /-->
 </main>
 <!-- /wp:group -->
