Update CSS styles for improved link behavior and layout adjustments
- Added `text-decoration: none !important;` to `#gototop a` and its hover state for consistent link appearance.
- Removed unnecessary flex-direction property from `.wp-block-cover` to streamline layout.
- Updated copyright year in `webentwicklerin.pot` and adjusted POT creation date.

--- a/assets/css/editor-style.css
+++ b/assets/css/editor-style.css
@@ -116,14 +116,12 @@
 }
 .editor-styles-wrapper #gototop a:hover {
   color: var(--wp--preset--color--base) !important;
+  text-decoration: none !important;
 }
 .editor-styles-wrapper img,
 .editor-styles-wrapper svg {
   max-width: 100%;
   height: auto;
-}
-.editor-styles-wrapper .wp-block-cover {
-  flex-direction: column;
 }
 .editor-styles-wrapper .wp-block-categories .wp-block-categories__label {
   width: auto;
