--- a/scss/02-template-parts.scss
+++ b/scss/02-template-parts.scss
@@ -82,6 +82,7 @@
         text-decoration: none !important;
         &:hover {
             color: var(--wp--preset--color--base) !important;
+            text-decoration: none !important;
         }
     }
 }
